_orgcss/site.css
.footpara {
    width: 99%;
    text-align: left;
    float: right;
    padding: 0;
    margin: 0;
}

.footdef {
    line-height: 2em;
}

pre.src.src-c {
    background-color: #000;
    color: #fff;
    font-size: 16px;
    font-family: 'Sora', sans-serif;
}

pre.src.src-scala {
    background-color: #000;
    color: #fff;
    font-size: 16px;
    font-family: 'JetBrains Mono', monospace;
}

